# nina_ui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: version.h.in
src/: common.h  logger.cpp  logger.h  main.cpp
src/drivers/: analog_input_control.cpp  analog_input_control.h  surface_control.cpp  surface_control.h
src/engine/: event.cpp  event.h  event_router.cpp  event_router.h  layer_info.cpp  layer_info.h  param.cpp  param.h  system_config.cpp  system_config.h  system_func.cpp  system_func.h  tempo.cpp  tempo.h  timer.cpp  timer.h  utils.cpp  utils.h
src/engine/managers/: analog_input_control_manager.cpp  analog_input_control_manager.h  arpeggiator_manager.cpp  arpeggiator_manager.h  base_manager.cpp  base_manager.h  daw_manager.cpp  daw_manager.h  file_manager.cpp  file_manager.h  keyboard_manager.cpp  keyboard_manager.h  midi_device_manager.cpp  midi_device_manager.h  osc_manager.cpp  osc_manager.h  sequencer_manager.cpp  sequencer_manager.h  surface_control_manager.cpp  surface_control_manager.h  sw_manager.cpp  sw_manager.h
src/engine/managers/gui/: gui_manager.cpp  gui_manager.h  gui_msg.h  gui_state.h
src/json_schemas/: config_schema.json  global_params_schema.json  haptic_modes_schema.json  layers_schema.json  param_aliases_schema.json  param_attributes_schema.json  param_blacklist_schema.json  param_lists_schema.json  param_map_schema.json  patch_history_schema.json  patch_schema.json  system_colours_schema.json
test/: CMakeLists.txt
test/generateMidi/: generateMidi.c
test/unittests/: arppegiator_tests.cpp
